tests/dataset/job/compiler/c/q30.error
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c: In function ‘test_Q30_finds_violent_horror_thriller_movies_with_male_writer’:
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:394:23: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  394 |           .len != tmp1.len) {
      |                       ^
      |                       ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:403:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  403 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:462:7: error: conflicting types for ‘violent_keywords’; have ‘int’
  462 |   int violent_keywords = violent_keywords;
      |       ^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:454:15: note: previous definition of ‘violent_keywords’ with type ‘list_string’
  454 |   list_string violent_keywords = list_string_create(7);
      |               ^~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:469:7: error: conflicting types for ‘writer_notes’; have ‘int’
  469 |   int writer_notes = writer_notes;
      |       ^~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:463:15: note: previous definition of ‘writer_notes’ with type ‘list_string’
  463 |   list_string writer_notes = list_string_create(5);
      |               ^~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:473:15: error: redefinition of ‘matches’
  473 |   list_string matches = list_string_create(2);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:470:15: note: previous definition of ‘matches’ with type ‘list_string’
  470 |   list_string matches = list_string_create(2);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:476:30: warning: implicit declaration of function ‘matches_item_list_t_create’ [-Wimplicit-function-declaration]
  476 |   matches_item_list_t tmp4 = matches_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:477:20: error: ‘(complete_cast_t *)&complete_cast’ is a pointer; did you mean to use ‘->’?
  477 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                    ^
      |                    ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:477:41: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  477 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:477:62: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  477 |       complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                                              ^
      |                                                              ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:478:16: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  478 |       cast_info.len * movie_info.len * movie_info_idx.len * movie_keyword.len *
      |                ^
      |                ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:478:33: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  478 |       cast_info.len * movie_info.len * movie_info_idx.len * movie_keyword.len *
      |                                 ^
      |                                 ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:478:54: error: ‘(movie_info_idx_t *)&movie_info_idx’ is a pointer; did you mean to use ‘->’?
  478 |       cast_info.len * movie_info.len * movie_info_idx.len * movie_keyword.len *
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:478:74: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  478 |       cast_info.len * movie_info.len * movie_info_idx.len * movie_keyword.len *
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:479:16: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  479 |       info_type.len * info_type.len * keyword.len * name.len * title.len);
      |                ^
      |                ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:479:32: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  479 |       info_type.len * info_type.len * keyword.len * name.len * title.len);
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:479:46: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  479 |       info_type.len * info_type.len * keyword.len * name.len * title.len);
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:479:57: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  479 |       info_type.len * info_type.len * keyword.len * name.len * title.len);
      |                                                         ^
      |                                                         ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:479:69: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  479 |       info_type.len * info_type.len * keyword.len * name.len * title.len);
      |                                                                     ^
      |                                                                     ->
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:538:68: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  538 |                           if (!((contains_list_string(matches, cct1.kind)) &&
      |                                                                ~~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:80:54: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:540:71: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  540 |                                 (contains_list_string(writer_notes, ci.note)) &&
      |                                                                     ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:80:54: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:543:56: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  543 |                                                       k.keyword)) &&
      |                                                       ~^~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:80:54: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:544:66: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  544 |                                 (contains_list_string(matches, mi.info)) &&
      |                                                                ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:80:54: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:567:23: error: conflicting types for ‘matches’; have ‘matches_item_list_t’
  567 |   matches_item_list_t matches = tmp4;
      |                       ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:473:15: note: previous definition of ‘matches’ with type ‘list_string’
  473 |   list_string matches = list_string_create(2);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:568:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  568 |   int tmp18 = int_create(matches.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:572:10: error: request for member ‘data’ in something not a structure or union
  572 |     tmp18.data[tmp19] = x.budget;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:575:8: error: request for member ‘len’ in something not a structure or union
  575 |   tmp18.len = tmp19;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:588:10: error: request for member ‘data’ in something not a structure or union
  588 |     tmp24.data[tmp25] = x.writer;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:591:8: error: request for member ‘len’ in something not a structure or union
  591 |   tmp24.len = tmp25;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:596:10: error: request for member ‘data’ in something not a structure or union
  596 |     tmp27.data[tmp28] = x.movie;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:599:8: error: request for member ‘len’ in something not a structure or union
  599 |   tmp27.len = tmp28;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:601:46: error: incompatible type for argument 1 of ‘_min_string’
  601 |       (result_t){.movie_budget = _min_string(tmp18),
      |                                              ^~~~~
      |                                              |
      |                                              int
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:603:40: error: incompatible type for argument 1 of ‘_min_string’
  603 |                  .writer = _min_string(tmp24),
      |                                        ^~~~~
      |                                        |
      |                                        int
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:604:56: error: incompatible type for argument 1 of ‘_min_string’
  604 |                  .complete_violent_movie = _min_string(tmp27)}};
      |                                                        ^~~~~
      |                                                        |
      |                                                        int
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:614:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  614 |     _json_string(it.movie_budget);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:88:32: note: expected ‘char *’ but argument is of type ‘const char *’
   88 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:622:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  622 |     _json_string(it.writer);
      |                  ~~^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:88:32: note: expected ‘char *’ but argument is of type ‘const char *’
   88 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:626:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  626 |     _json_string(it.complete_violent_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:88:32: note: expected ‘char *’ but argument is of type ‘const char *’
   88 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:631:7: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  631 |       result;
      |       ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:633:13: error: request for member ‘data’ in something not a structure or union
  633 |   free(tmp18.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:635:13: error: request for member ‘data’ in something not a structure or union
  635 |   free(tmp24.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq302871716165/001/prog.c:636:13: error: request for member ‘data’ in something not a structure or union
  636 |   free(tmp27.data);
      |             ^
